--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
          <h2 v-else="age==20">equal to 20</h2>
          <button v-on:click="age++">submit</button> -->
 
-         <div v-for="(student,i) in students" :key="i">
+         <!-- <div v-for="(student,i) in students" :key="i">
             <p>
                 {{student.name}}
             </p>
@@ -68,7 +68,15 @@
                 {{student.age}}
             </p>
             <br>
+         </div> -->
+         <div class="container">
+         <div v-for="product in products" :key="product.id" class="card">
+            <img v-bind:src="product.image" alt="" srcset="">
+            <h3>{{product.name}}</h3>
+            <p>{{product.description}}</p>
+            <span>price = {{product.price}}</span>
          </div>
+        </div>
     </div>
 </body>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
