--- a/index.html
+++ b/index.html
@@ -10,78 +10,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="" id="app-root">
-        <!-- <h2>my name is {{name}}</h2>
-        <h2>my age is {{age}}</h2>
-        <h2>{{sayHi(name)}}</h2>
-        <h2>{{sayShit(10)}}</h2>
-        <h2>{{sayShit(age)}}</h2>
-        <a v-bind:href="link">test</a>
- -->
-        <!-- <p>{{number}}</p>
-        <button v-on:dblclick="myFunction">click</button>  -->
-        <!-- <button @click></button> -->
-         <!-- <input type="text" @keydown="keyboardFunction"> -->
-
-         <!-- <form action="" @submit.prevent="formMethod" method="get">
-            <label for="">{{name}}</label>
-            <input v-model="name" type="text">
-          <label for=""></label>
-            <input type="text">
-            <label for=""></label>
-            <input type="text">
-            <label for=""></label>
-            <input type="text"> -->
-            <!-- <select name="" id=""> -->
-                <!-- <option v-bind:value="name">{{name}}</option> -->
-            <!-- </select> -->
-            <!-- <button type="submit">submit</button> --> 
-         <!-- </form> -->
-         
-         <!-- <p>number one is {{numberOne}}</p>
-         <p>number one is {{functionOne}}</p>
-         <button v-on:click="numberOne++">click here</button>
-         <p>number Two is {{numberTwo}}</p>
-         <p>number Two is {{functionTwo}}</p>
-         <button v-on:click="numberTwo++">click here</button> -->
-         <!-- <button v-on:click="numberOne++">click here</button> -->
-         <!-- <p>number one is {{numberTwo}}</p>
-         <button v-on:click="numberTwo()">click here</button> -->
-
-         <!-- <h2 v-bind:class="classing">My Text</h2>
-         <input type="text" v-model="classing"> -->
-
-         <!-- <h2 v-bind:style="`font-size : ${font_size}px`">Hello</h2>
-         <input type="text" v-model="font_size"> -->
-
-         <!-- <h2>{{age}}</h2>
-         <h2 v-if="age<20">less than 20</h2>
-         <h2 v-else-if="age>20">bigger than 20</h2>
-         <h2 v-else="age==20">equal to 20</h2>
-         <button v-on:click="age++">submit</button> -->
-
-         <!-- <div v-for="(student,i) in students" :key="i">
-            <p>
-                {{student.name}}
-            </p>
-            <p>
-                {{student.age}}
-            </p>
-            <br>
-         </div> -->
-         <div class="container">
-         <div v-for="product in products" :key="product.id" class="card">
-            <img v-bind:src="product.image" alt="" srcset="">
-            <h3>{{product.name}}</h3>
-            <p>{{product.description}}</p>
-            <p>{{product.category}}</p>
-            <div class="colors">
-            <span  v-for="color in product.colors" v-bind:style="`background: ${color};`"></span>
-            </div>
-            <p>price = {{product.price}}</p>
-         </div>
-        </div>
+    <div  id="app-root">
+        <p>{{age}}</p>
     </div>
+    
+    <div id="app-root-2">
+        <button v-on:click="increaseAge">Increase</button>
+    </div>
+
 </body>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="app.js"></script>
